color contrast issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
+    color: black;
 }
 
 p{
